# maps

./: .env_template  .gitignore  .pre-commit-config.yaml  .pre-commit-ignore  .secrets.baseline  CNAME  FIELD_REGISTRY_USAGE.md  Gemfile  INTERACTIVE_MAP.md  LICENSE.md  README.md  README_Election_Mapping_Pipeline.md  SCHEMA_DRIFT_COMPLETE_GUIDE.md  SCHEMA_DRIFT_SOLUTION.md  __init__.py  _config.yml  cavagnolo.html  debug_eventbus.js  field_registry_test_report.md  index.html  index.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_field_registry.py
_includes/: footer.html  head.html  header.html
_layouts/: home.html
analysis/: README_interactive_maps.md  achievement_trends.py  config.yaml  config_loader.py  create_vector_tiles.py  demo_supabase.py  enrich_voters_election_data.py  grad_prof_rates_2011-2024.py  households.py  map_election_results.py  map_households.py  map_voters.py  run_pipeline.py  schema_cli.py  schema_drift_monitor.py  supabase_integration.py
archive/: cavagnolo.html  index.html  post-submit-share.html  share.html
coverage/: clover.xml  coverage-final.json  lcov.info
data/: hh_no_minors_report.md
docs/: FIELD_REGISTRY_USAGE.md  INTERACTIVE_MAP.md  SCHEMA_DRIFT_COMPLETE_GUIDE.md  SCHEMA_DRIFT_SOLUTION.md  click_migration.md  election_map.html  election_map_backup.html  field_registry_usage.md  import_migration.md  javascript_refactoring_plan.md  logging_system.md  spatial_analysis_plan.md
html/: README.md  debug_vector_tiles.html  election_map.html  election_map_backup.html  election_map_debug.html  index.html  (+8 more)
(+513 files in other folders)
