[project]
name = "election-analysis"
version = "0.1.0"
description = "Election analysis pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.flake8]
max-line-length = 100
